# AIMS-CrewAI-Demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  stock_analysis_agents.py  stock_analysis_tasks.py
tools/: calculator_tools.py  search_tools.py  sec_tools.py
